# agent_harness

./: .env.example  .gitignore  BACKGROUND_RUN_FIXES.md  BACKGROUND_RUN_IMPLEMENTATION.md  CONVERSATION_HISTORY_SUPPORT.md  IMPLEMENTATION_COMPLETE.md  MULTI_GYM_SUPPORT.md  PR_DESCRIPTION.md  README.md  REFACTORING_SUMMARY.md  SDK_ANALYSIS_REPORT.md  SDK_ARCHITECTURE.md  SDK_CODE_ANALYSIS.md  SDK_Runtime_Audit.md  eval.ipynb  eval_sample.ipynb  new_sys_task12_3_c1_p1_r8_v4_benchmark.json  noop_harness.json  old_sample_new_system_1_benchmark.json  pyproject.toml  sdk_harness_example.ipynb  sdk_runtime_review.md  task4.json
src/jira_mcp_benchmark/: __init__.py  __main__.py  agent.py  background_manager.py  background_viewer.py  cli.py  gym_loader.py  mcp_loader.py  prompts.py  providers.py  rate_limiter.py  run_logging.py  session_picker.py  textual_ui.py  verifier.py
turing_rl_cli/: README.md  pyproject.toml
turing_rl_cli/src/turing_rl_cli/: agent_factory.py  cli.py  config.py  openrouter_agent.py  prompts.py  qwen_agent.py  tracing.py
turing_rl_cli/src/turing_rl_cli/runners/: base.py  plain.py  quiet.py  textual_runner.py
turing_rl_cli/src/turing_rl_cli/session/: manager.py
turing_rl_cli/src/turing_rl_cli/ui/: console_observer.py  quiet_observer.py  textual_app.py  textual_observer.py
turing_rl_sdk/: DEPENDENCY_INJECTION_GUIDE.md  IMPORT_GUIDE.md  PR.md  QUICKSTART.md  README.md  TESTABILITY_ANALYSIS.md  TESTABILITY_SUMMARY.md  pyproject.toml
turing_rl_sdk/examples/: SDK_USAGE_GUIDE.ipynb  sdk_usage_showcase.ipynb  simple_harness_example.py
turing_rl_sdk/src/turing_rl_sdk/: __init__.py  constants.py
turing_rl_sdk/src/turing_rl_sdk/agents/: __init__.py  constants.py  telemetry.py
turing_rl_sdk/src/turing_rl_sdk/agents/core/: base.py  claude.py  gemini.py  gpt.py  grok.py
turing_rl_sdk/src/turing_rl_sdk/agents/mcp/: loader.py  tool_fixer.py
turing_rl_sdk/src/turing_rl_sdk/agents/parsers/: base.py  xai.py
turing_rl_sdk/src/turing_rl_sdk/agents/runtime/: __init__.py  context.py  events.py
turing_rl_sdk/src/turing_rl_sdk/agents/tasks/: __init__.py  result.py  task.py
turing_rl_sdk/src/turing_rl_sdk/agents/utils/: retry.py
turing_rl_sdk/src/turing_rl_sdk/harness/: README.md  __init__.py  agent_factory.py  orchestrator.py  scenario.py
turing_rl_sdk/src/turing_rl_sdk/harness/verifiers/: __init__.py  database.py  utils.py
