[project]
name = "jira-mcp-benchmark"
version = "0.1.0"
description = "LangChain benchmark runner that drives a local MCP server with multiple LLM providers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.2.11",
    "langchain-core>=0.2.28",
    "langchain-openai>=0.1.21",
    "langchain-anthropic>=0.1.8",
    "langchain-google-genai>=1.0.0",
    "langchain-xai>=0.0.3",
    "langchain-mcp-adapters>=0.0.8",
    "mcp>=1.9.1",
    "typer>=0.12.3",
    "pydantic>=2.7",
    "rich>=13.7",
    "python-dotenv>=1.0.1",
    "textual>=0.58.0",
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["ruff>=0.4.10", "pytest>=8.2"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
