[project]
name = "turing-rl-cli"
version = "0.1.0"
description = "CLI tool for running MCP agent benchmarks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "turing-rl-sdk>=0.1.0",
    "typer>=0.20.0",
    "rich>=14.2.0",
    "python-dotenv>=1.1.1",
    "textual>=6.5.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["ruff>=0.4.10", "pytest>=8.2"]

[tool.uv.sources]
turing-rl-sdk = { path = "../turing_rl_sdk", editable = true }

[project.scripts]
turing-rl = "turing_rl_cli.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
